Fixed user stats view being visible before a user has been selected

--- a/ManagerDash-Stats/statisticsHomePage.css
+++ b/ManagerDash-Stats/statisticsHomePage.css
@@ -195,7 +195,7 @@ tr:hover {
     overflow-y:auto;
 }
 
-#tabGroupUserStats, #projectViewStats {
+#tabGroupUserStats, #projectViewStats, #userViewStats {
     display: none;
     height:50vh;
     overflow-y:auto;
